gccida/c2/simplify_comparison
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/combine.c:10394:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  simplify_comparison( rtx_code code, rtx *pop0, rtx *pop1) 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/combine.c:10394:32: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code  simplify_comparison( rtx_code code, rtx *pop0, rtx *pop1) 
                               ^
                               enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/combine.c:10397:4: error: expected ';' after expression
rtx v4; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/combine.c:10397:5: error: use of undeclared identifier 'v4'
rtx v4; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/combine.c:10416:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v23; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/combine.c:10430:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v37; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/combine.c:10431:4: error: expected ';' after expression
rtx v38; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/combine.c:10431:5: error: use of undeclared identifier 'v38'
rtx v38; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/combine.c:10433:4: error: expected ';' after expression
rtx v40; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/combine.c:10433:5: error: use of undeclared identifier 'v40'
rtx v40; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/combine.c:10437:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v44; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/combine.c:10439:4: error: expected ';' after expression
rtx compound_operation; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/combine.c:10439:5: error: use of undeclared identifier 'compound_operation'; did you mean 'make_compound_operation'?
rtx compound_operation; // rbx 
    ^~~~~~~~~~~~~~~~~~
    make_compound_operation
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/combine.c:6337:1: note: 'make_compound_operation' declared here
make_compound_operation (x, in_code)
^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/combine.c:10441:4: error: expected ';' after expression
rtx v48; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/combine.c:10441:5: error: use of undeclared identifier 'v48'
rtx v48; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/combine.c:10445:4: error: expected ';' after expression
rtx v52; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/combine.c:10445:5: error: use of undeclared identifier 'v52'
rtx v52; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/combine.c:10446:4: error: expected ';' after expression
rtx v53; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/combine.c:10446:5: error: use of undeclared identifier 'v53'
rtx v53; // rbx 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/simplify_comparison/src/obj/combine.o] Error 1
